@@ -35,7 +35,9 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
-2006-09-01 DP  1.6.0  Add support for building Mac Universal Binaries. 
+2006-09-06 DP  1.6.0  The RULE privilege is not applicable to tables in 8.2
+                      so don't use it.
+2006-09-01 DP  1.6.0  Add support for building Mac Universal Binaries.
                       With help from Florian G. Pflug and Chris Campbell.
 2006-08-30 DP  1.6.0  Fix maintenance dialogue for Primary Keys and Unique
                       constraints per Alexander Kirpa
